force-app/main/default/objects/Orl_invoice__c/fields/Advanced_Order__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advanced Order</label>
    <referenceTo>cgcloud__Order__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>