force-app/main/default/objects/Orl_invoice__c/fields/Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Due_Amount__c</fullName>
    <formula>Gross_Total_Value__c  -  Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>