force-app/main/default/objects/Orl_invoice__c/fields/Gross_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Gross_Total_Value__c</fullName>
    <formula>Advanced_Order__r.cgcloud__Gross_Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>