force-app/main/default/objects/Orl_invoice__c/fields/Orl_Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>Orl_Credit_Period__c</fullName>
    <label>Credit Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>