force-app/main/default/objects/Orl_invoice__c/fields/Orl_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Orl_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>