force-app/main/default/objects/Orl_invoice__c/fields/Orl_Gross_Value_Total__c.field-meta.xml
<CustomField>
    <fullName>Orl_Gross_Value_Total__c</fullName>
    <label>Gross Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>