force-app/main/default/objects/Orl_invoice__c/fields/Orl_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Orl_Invoice_No__c</fullName>
    <label>Invoice No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>