force-app/main/default/objects/Orl_invoice__c/fields/Orl_Invoice_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Orl_Invoice_Ship_To__c</fullName>
    <label>Invoice Ship To</label>
    <type>Address</type>
</CustomField>