force-app/main/default/objects/Orl_invoice__c/fields/Orl_Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Orl_Invoiced_Date__c</fullName>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>