force-app/main/default/objects/Orl_invoice__c/fields/Orl_Order__c.field-meta.xml
<CustomField>
    <fullName>Orl_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>