force-app/main/default/objects/Orl_invoice__c/fields/Orl_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Orl_Sales_Person__c</fullName>
    <label>Sales Person</label>
    <length>30</length>
    <type>Text</type>
</CustomField>