force-app/main/default/objects/Orl_invoice__c/fields/Orl_Tel__c.field-meta.xml
<CustomField>
    <fullName>Orl_Tel__c</fullName>
    <label>Tel</label>
    <type>Phone</type>
</CustomField>