force-app/main/default/objects/Orl_invoice__c/fields/Orl_Units_Qty__c.field-meta.xml
<CustomField>
    <fullName>Orl_Units_Qty__c</fullName>
    <label>Units Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>